Fix for small screens resizing in header. (all navigation links visible  and clickable. Backgroung needs to be adjusted) Additional fix for images links in index

--- a/public_html/styles/general.css
+++ b/public_html/styles/general.css
@@ -61,10 +61,11 @@ a {
 .main-header {
 	background-color: rgba(36, 17, 28, 0.41);
 	border-bottom: 2px solid #a56c98;
-	overflow: hidden;
 	margin-bottom: 50px;
 	padding-bottom: 10px;
 }
+
+
 
 .upper-header {
 	height: 150px;
